--- a/src/components/HeroSection.module.scss
+++ b/src/components/HeroSection.module.scss
@@ -8,6 +8,33 @@
   flex-direction: column;
   row-gap: 1.75rem;
 
+  & .tagLink {
+    background-color: var(--colors-accent-50);
+    color: var(--colors-accent-600);
+    display: inline-flex;
+    align-items: center;
+    column-gap: 0.25rem;
+    width: fit-content;
+    font-weight: var(--font-weight-medium);
+    font-size: var(--font-size-sm);
+    line-height: 2;
+    padding-left: 1rem;
+    padding-right: 0.75rem;
+    border-radius: var(--round-full);
+
+    &:hover {
+      & > svg {
+        translate: 0.25rem;
+      }
+    }
+
+    & > svg {
+      width: 1rem;
+      height: 1rem;
+      transition: translate 0.3s;
+    }
+  }
+
   & .mainCopy {
     font-size: 3.375rem;
     font-weight: var(--font-weight-extrabold);
