--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,3 +1,13 @@
+.background {
+  min-height: 100vh;
+  background: linear-gradient(
+      130deg,
+      #ffffff 40%,
+      rgba(230, 237, 255, 0.29) 55%
+    ),
+    #ffffff;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
